# rust_jni_boilerplate

./: .gitignore  README.md
jni_boilerplate/: Cargo.toml
jni_boilerplate/src/: lib.rs
jni_boilerplate_helper/: Cargo.toml
jni_boilerplate_helper/src/: array_copy_back.rs  java_runtime_wrappers.rs  lib.rs
